--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
+    "nuxt-lodash": "^2.5.3",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   },
-  "dependencies": {
-    "@nuxt/content": "^2.9.0",
-    "@nuxt/ui": "^2.11.1"
+  "dependencies": {   
+    "@nuxt/content": "^2.9.0-28384782.6a56986", 
+    "click-outside-vue3": "^4.0.1",
+    "mathjs": "^12.2.0",
+    "vue3-touch-events": "^4.1.8"
   }
 }
